[package]
name = "cargo-downfix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_io_api = { version = "0.8.0", default-features = false, features = ["rustls"] }
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
toml = "0.5.8"
